--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -128,7 +128,7 @@ identity_providers:
           - email
           - profile
         userinfo_signed_response_alg: none
-        token_endpoint_auth_method: client_secret_basic
+        token_endpoint_auth_method: client_secret_post
     jwks:
       - algorithm: RS256
         key: {{ secret "/secrets/identity_providers_oidc_jwks_rsa4096_key" | mindent 10 "|" | msquote }}
