--- a/roles/devsetup/tasks/main.yml
+++ b/roles/devsetup/tasks/main.yml
@@ -64,6 +64,10 @@
     - executable: virtctl
       bin: "https://github.com/kubevirt/kubevirt/releases/download/{{ virtctl_version }}/virtctl-{{ virtctl_version }}-linux-{{ deb_architecture[ansible_architecture] }}"
       version: "{{ virtctl_version }}"
+    - deb: "https://github.com/wez/wezterm/releases/download/{{ wezterm_version }}/wezterm-{{ wezterm_version }}.Ubuntu22.04.deb"
+      executable: wezterm
+      sha256: "https://github.com/wez/wezterm/releases/download/{{ wezterm_version }}/wezterm-{{ wezterm_version }}.Ubuntu22.04.deb.sha256"
+      version: "{{ wezterm_version }}"
   vars:
     deb_architecture:
       x86_64: amd64
@@ -77,5 +81,7 @@
     starship_version: v1.20.1
     # renovate: datasource=github-releases depName=kubevirt/kubevirt
     virtctl_version: v1.3.0
+    # renovate: datasource=github-releases depName=wez/wezterm
+    wezterm_version: 20240203-110809-5046fc22
 
 - import_tasks: shell.yml
