--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -34,6 +34,7 @@ access_control:
     - domain: ara.hogs.tswn.us
       networks:
         - cluster
+        - dev
         - kubernetes
         - man
         - 10.117.0.24 # monitor.house.gem.hogs.tswn.us
