--- a/kustomization/components/prometheus/rules/disk.yml
+++ b/kustomization/components/prometheus/rules/disk.yml
@@ -12,14 +12,14 @@ spec:
         - alert: disk-utilization-high
           annotations:
             description: "{{ $value }}% of {{ $labels.host }} disk used!"
-          expr: (100 * host_filesystem_used_ratio{filesystem="ext4"}) > 85
+          expr: (100 * host_filesystem_used_ratio{device="/dev/disk/by-label/COS_PERSISTENT"}) > 85
           for: 5m
           labels:
             severity: warning
         - alert: disk-dangerously-high
           annotations:
             description: "{{ $value }}% of {{ $labels.host }} disk used!"
-          expr: (100 * host_filesystem_used_ratio{filesystem="ext4"}) > 95
+          expr: (100 * host_filesystem_used_ratio{device="/dev/disk/by-label/COS_PERSISTENT"}) > 95
           for: 15m
           labels:
             severity: page
