--- a/kustomization/components/factorio/statefulset.yml
+++ b/kustomization/components/factorio/statefulset.yml
@@ -66,7 +66,7 @@ spec:
         resources:
           requests:
             storage: 20Gi
-        storageClassName: longhorn-encrypted
+        storageClassName: longhorn-unencrypted
     - metadata:
         labels:
           # Use this PVC to configure attached PVs.
