--- a/kustomization/components/valheim/statefulset.yml
+++ b/kustomization/components/valheim/statefulset.yml
@@ -103,7 +103,7 @@ spec:
         resources:
           requests:
             storage: 20Gi
-        storageClassName: longhorn-encrypted
+        storageClassName: longhorn-unencrypted
     - metadata:
         labels:
           # Use this PVC to configure attached PVs.
@@ -119,8 +119,15 @@ spec:
         resources:
           requests:
             storage: 10Gi
-        storageClassName: longhorn-encrypted
+        storageClassName: longhorn-unencrypted
     - metadata:
+        labels:
+          # Use this PVC to configure attached PVs.
+          recurring-job.longhorn.io/source: enabled
+          # Opt out of the default group.
+          recurring-job-group.longhorn.io/default: disabled
+          # Opt into the no-backup group since it can easily be recreated.
+          recurring-job-group.longhorn.io/no-backup: enabled
         name: valheim-steam
       spec:
         accessModes:
@@ -128,4 +135,4 @@ spec:
         resources:
           requests:
             storage: 10Gi
-        storageClassName: longhorn-encrypted
+        storageClassName: longhorn-unencrypted
