group penpot containers

--- a/renovate.json
+++ b/renovate.json
@@ -85,6 +85,12 @@
       "minimumReleaseAge": "1 month"
     },
     {
+      "groupName": "penpot",
+      "matchPackageNames": [
+        "penpotapp/**"
+      ]
+    },
+    {
       "groupName": "tdarr",
       "matchPackageNames": [
         "**tdarr**"
