--- a/kustomization/components/multus/kustomization.yml
+++ b/kustomization/components/multus/kustomization.yml
@@ -2,14 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
-images:
-  - name: ghcr.io/k8snetworkplumbingwg/multus-cni
-    newTag: v4.0.2-thick
 patches:
-  - path: patches/update_volume_mounts_for_k3s.yml
+  - path: patches/set_cni_paths.yml
     target:
       kind: DaemonSet
       name: kube-multus-ds
 resources:
   # renovate: datasource=github-releases
-  - https://raw.githubusercontent.com/k8snetworkplumbingwg/multus-cni/v4.0.2/deployments/multus-daemonset-thick.yml
+  - https://raw.githubusercontent.com/k8snetworkplumbingwg/multus-cni/v4.1.0/deployments/multus-daemonset.yml
