--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -22,6 +22,7 @@ resources:
   - application/lg.yml
   - application/longhorn.yml
   - application/manyfold.yml
+  - application/multus.yml
   - application/paperless.yml
   - application/postgresql.yml
   - application/prometheus.yml
