Enable postgresql operator owner references

--- a/kustomization/components/postgresql-operator/patches/set_better_default_configuration.yml
+++ b/kustomization/components/postgresql-operator/patches/set_better_default_configuration.yml
@@ -5,6 +5,9 @@ metadata:
   name: this-is-ignored-but-is-required
 configuration:
   kubernetes:
+    # Enables setting kubernetes owernship references.
+    enable_owner_references: true
+
     # Prevent nodes in the same cluster from being on the same host.
     enable_pod_antiaffinity: true
 
