create an alert to catch when postrgres is a replica but is not streaming

--- a/kustomization/components/prometheus/rules/postgresql.yml
+++ b/kustomization/components/prometheus/rules/postgresql.yml
@@ -23,3 +23,10 @@ spec:
           for: 15m
           labels:
             severity: page
+        - alert: postgresql-lagging-replica
+          annotations:
+            description: "Postgres replica not streaming in {{ $labels.name }}!"
+          expr: patroni_replica == 1 and patroni_postgres_streaming == 0
+          for: 15m
+          labels:
+            severity: page
