--- a/group_vars/vyos_work.yml
+++ b/group_vars/vyos_work.yml
@@ -4,6 +4,7 @@ vyos_dhcp_server__failover_name: work-HA
 vyos_dhcp_server__networks:
   - name: "WORK"
     default_router: "192.168.1.84"
+    id: 15
     own_dns: false
     range:
       start: "192.168.1.100"
@@ -19,19 +20,19 @@ vyos_firewall__zones:
   - name: MAN
     description: "management vlan ({{ ansible_managed }})"
     interfaces:
-      - eth1.10
+      - eth0.10
   - name: TRANSIT
     description: "Transit between local routers ({{ ansible_managed }})"
     interfaces:
-      - eth0
+      - eth0.2
   - name: SYNC
     description: "Synchronization traffic (like VRRP, DHCP, etc) ({{ ansible_managed }})"
     interfaces:
-      - eth1.9
+      - eth0.9
   - name: WORK
     description: "Work device network ({{ ansible_managed }})"
     interfaces:
-      - eth1.15
+      - eth0.15
 vyos_firewall__zones_root_path: firewall_zones/vyos_work
 
 vyos_firewall_global__group:
@@ -63,12 +64,12 @@ vyos_firewall_global__group:
 
 vyos_interfaces__ethernet:
   - name: eth0
-    description: "TRANSIT - router-to-router traffic ({{ ansible_managed }})"
-    ipv4:
-      - address: "10.2.0.{{ vyos__host_id_ipv4 }}/24"
-  - name: eth1
     description: "Trunk ({{ ansible_managed }})"
     vifs:
+      - vlan_id: 2
+        description: "TRANSIT - router-to-router traffic ({{ ansible_managed }})"
+        ipv4:
+          - address: "10.2.0.{{ vyos__host_id_ipv4 }}/24"
       - vlan_id: 9
         description: "SYNC - used for router synchronization communication ({{ ansible_managed }})"
         ipv4:
@@ -95,7 +96,7 @@ vyos_system__name_servers:
   - "10.10.0.4"
 
 vyos_vrrp__conntrack_sync:
-  interface: eth1.9
+  interface: eth0.9
   peer_address: "10.9.0.{{ vyos__peer_host_id_ipv4 }}"
   sync_group: MAIN
 vyos_vrrp__groups:
@@ -108,7 +109,7 @@ vyos_vrrp__groups:
     virtual_address: 10.2.0.84/24
     vrid: 2
   - hello_source_address: "192.168.1.{{ vyos__host_id_ipv4 }}"
-    interface: eth1.15
+    interface: eth0.15
     name: WORK-v4
     peer_address: "192.168.1.{{ vyos__peer_host_id_ipv4 }}"
     priority: "{{ vyos__vrrp_priority }}"
