--- a/kustomization/overlays/experimental/routers/kustomization.yml
+++ b/kustomization/overlays/experimental/routers/kustomization.yml
@@ -6,5 +6,7 @@ namespace: routers
 resources:
   - namespace.yml
   - networkattachmentdefinition.yml
+  - persistentvolumeclaim/guest02.routers.hogs.tswn.us.yml
   - persistentvolumeclaim/work02.routers.hogs.tswn.us.yml
+  - virtualmachine/guest02.routers.hogs.tswn.us.yml
   - virtualmachine/work02.routers.hogs.tswn.us.yml
