--- a/kustomization/overlays/experimental/routers/kustomization.yml
+++ b/kustomization/overlays/experimental/routers/kustomization.yml
@@ -7,6 +7,8 @@ resources:
   - namespace.yml
   - networkattachmentdefinition.yml
   - persistentvolumeclaim/guest02.routers.hogs.tswn.us.yml
+  - persistentvolumeclaim/work01.routers.hogs.tswn.us.yml
   - persistentvolumeclaim/work02.routers.hogs.tswn.us.yml
   - virtualmachine/guest02.routers.hogs.tswn.us.yml
+  - virtualmachine/work01.routers.hogs.tswn.us.yml
   - virtualmachine/work02.routers.hogs.tswn.us.yml
