--- a/roles/vyos-dns-forwarding/tasks/main.yml
+++ b/roles/vyos-dns-forwarding/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for vyos-dns-forwarding
 - name: Setup DNS forwarding
   vyos.vyos.vyos_config:
-    src: dns_forwarding.j2
+    lines: "{{ lookup('template', 'templates/dns_forwarding.yml.j2') | from_yaml }}"
     save: true
   when: "vyos_dns_forwarding__listen_addresses | default([]) | length > 0"
   tags:
