--- a/roles/vyos-vrrp/tasks/main.yml
+++ b/roles/vyos-vrrp/tasks/main.yml
@@ -2,15 +2,7 @@
 # tasks file for vyos-vrrp
 - name: Setup VRRP Groups and Sync Groups
   vyos.vyos.vyos_config:
-    src: vrrp_groups.j2
-    save: true
-  when: "vyos_vrrp__groups | default([]) | length > 0"
-  tags:
-    - vrrp
-
-- name: Setup Connection Tracking Synchronization
-  vyos.vyos.vyos_config:
-    src: conntrack_sync.j2
+    lines: "{{ lookup('template', 'templates/ha.yml.j2') | from_yaml }}"
     save: true
   when: "vyos_vrrp__groups | default([]) | length > 0"
   tags:
