--- a/kustomization/overlays/experimental/routers/kustomization.yml
+++ b/kustomization/overlays/experimental/routers/kustomization.yml
@@ -6,10 +6,12 @@ namespace: routers
 resources:
   - namespace.yml
   - networkattachmentdefinition.yml
+  - persistentvolumeclaim/centurylink.routers.hogs.tswn.us.yml
   - persistentvolumeclaim/guest01.routers.hogs.tswn.us.yml
   - persistentvolumeclaim/guest02.routers.hogs.tswn.us.yml
   - persistentvolumeclaim/work01.routers.hogs.tswn.us.yml
   - persistentvolumeclaim/work02.routers.hogs.tswn.us.yml
+  - virtualmachine/centurylink.routers.hogs.tswn.us.yml
   - virtualmachine/guest01.routers.hogs.tswn.us.yml
   - virtualmachine/guest02.routers.hogs.tswn.us.yml
   - virtualmachine/work01.routers.hogs.tswn.us.yml
