--- a/roles/vyos-interfaces/tasks/main.yml
+++ b/roles/vyos-interfaces/tasks/main.yml
@@ -12,7 +12,7 @@
 
 - name: "Setup PPPOE"
   vyos.vyos.vyos_config:
-    src: "pppoe_config.j2"
+    lines: "{{ lookup('template', 'templates/pppoe_config.yml.j2') | from_yaml }}"
     save: true
   when: "vyos_interfaces__pppoe | default([]) | length > 0"
 
