--- a/group_vars/vyos.yml
+++ b/group_vars/vyos.yml
@@ -1,3 +1,7 @@
+---
+# renovate: datasource=github-releases depName=vyos/vyos-nightly-build
+vyos_version: 1.5-rolling-202409060006
+
 ansbile_network_cli_ssh_type: libssh
 ansible_connection: network_cli
 ansible_network_os: vyos
