--- a/plays/vyos.yml
+++ b/plays/vyos.yml
@@ -231,7 +231,7 @@
     #
     # NAT
     #
-    - set_fact:
+    - ansible.builtin.set_fact:
         lan_interfaces_with_wan_access:
           # MAN
           - interface: "{{ vyos__lan_interface }}.10"
