update vyos_remote nat configuration for 1.5

--- a/plays/vyos.yml
+++ b/plays/vyos.yml
@@ -326,9 +326,9 @@
     - name: Setup NAT masquerade rules
       vyos.vyos.vyos_config:
         lines:
-          - "set nat source rule {{ (rule_number + 1) * 10 }} outbound-interface eth0"
-          - "set nat source rule {{ (rule_number + 1) * 10 }} source address {{ item }}"
-          - "set nat source rule {{ (rule_number + 1) * 10 }} translation address masquerade"
+          - "set nat source rule {{ (rule_number + 1) * 10 }} outbound-interface name 'eth0'"
+          - "set nat source rule {{ (rule_number + 1) * 10 }} source address '{{ item }}'"
+          - "set nat source rule {{ (rule_number + 1) * 10 }} translation address 'masquerade'"
         save: true
       loop:
         - 10.11.0.0/23
@@ -341,7 +341,7 @@
         lines:
           - "set nat destination rule {{ (rule_number + 1) * 10 }} description '{{ item.description }}'"
           - "set nat destination rule {{ (rule_number + 1) * 10 }} destination port '{{ item.port }}'"
-          - "set nat destination rule {{ (rule_number + 1) * 10 }} inbound-interface eth0"
+          - "set nat destination rule {{ (rule_number + 1) * 10 }} inbound-interface name 'eth0'"
           - "set nat destination rule {{ (rule_number + 1) * 10 }} protocol '{{ item.protocol }}'"
           - "set nat destination rule {{ (rule_number + 1) * 10 }} translation address '{{ item.translation_address }}'"
           - "set nat destination rule {{ (rule_number + 1) * 10 }} translation port '{{ item.translation_port | default(item.port) }}'"
